@@ -23,6 +23,7 @@
         exmpp_client_compression,
         exmpp_client_legacy_auth,
         exmpp_client_presence,
+        exmpp_client_privacy,
         exmpp_client_pubsub,
         exmpp_client_register,
         exmpp_client_roster,
@@ -32,6 +33,7 @@
         exmpp_server_binding,
         exmpp_server_compression,
         exmpp_server_legacy_auth,
+        exmpp_server_privacy,
         exmpp_server_sasl,
         exmpp_server_session,
         exmpp_server_tls,
