@@ -24,6 +24,7 @@
 		'@srcdir@/client/exmpp_client_compression',
 		'@srcdir@/client/exmpp_client_legacy_auth',
 		'@srcdir@/client/exmpp_client_presence',
+		'@srcdir@/client/exmpp_client_privacy',
 		'@srcdir@/client/exmpp_client_pubsub',
 		'@srcdir@/client/exmpp_client_register',
 		'@srcdir@/client/exmpp_client_roster',
@@ -33,6 +34,7 @@
 		'@srcdir@/server/exmpp_server_binding',
 		'@srcdir@/server/exmpp_server_compression',
 		'@srcdir@/server/exmpp_server_legacy_auth',
+		'@srcdir@/server/exmpp_server_privacy',
 		'@srcdir@/server/exmpp_server_sasl',
 		'@srcdir@/server/exmpp_server_session',
 		'@srcdir@/server/exmpp_server_tls',
